调整样式字体

--- a/packages/site/src/styles/global.scss
+++ b/packages/site/src/styles/global.scss
@@ -5,6 +5,9 @@
     outline: 0;
     box-sizing: border-box;
 }
+body {
+    font-family: -apple-system, system-ui, 'Segoe UI', 'Roboto', 'Ubuntu', 'Cantarell', 'Noto Sans', sans-serif, 'BlinkMacSystemFont', 'Helvetica Neue', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', Arial !important;
+}
 html,
 body,
 .app {
