--- a/packages/admin/src/styles/internal.scss
+++ b/packages/admin/src/styles/internal.scss
@@ -128,6 +128,9 @@ a {
         right: 0;
         bottom: 30px;
         padding: 10px 0;
+        &.no-action {
+            top: 0px;
+        }
         &.no-page {
             bottom: 0px;
         }
